--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,9 @@
                 <li>关注前端前沿技术，基础工扎实，熟悉jQuery, javascript，CSS(3)， HTML(5)。</li>
                 <li>熟悉React、Vue等前端单页面模块化开发技术。</li>
                 <li>熟悉百度地图、echarts、fontawesome、bootstrap、bootstrapTable等第三方库。</li>
-                <li>熟悉SVN、git等项目管理工具。了解PHP, MySQL、C#、JavaWeb等后端知识。</li>
+                <li>熟悉jira、git等项目管理工具。了解PHP, MySQL、C#、JavaWeb等后端知识。</li>
+                <li>了解React Native、微信小程序等跨端技术。</li>
+                <li>了解Next、Nuxt等SSR技术。</li>
                 <li>注重团队合作，乐于与人交流，有较强的责任心，希望找寻一份可以长期发展的工作，让自己和公司实现共赢。</li>
             </ul>
         </div>
@@ -98,8 +100,17 @@
             <div class="badge">项目经验</div>
             <div class="item-part">
                 <div class="item-info">
-                    <div class="item-info-name">重型柴油车国六排放监控平台</div>
-                    <div class="item-info-date">2018.11 - 2019.02</div>
+                    <div class="item-info-name">车辆攻防演示项目</div>
+                    <div class="item-info-date">2018.03 - 至今</div>
+                </div>
+                <div class="item-intro">项目介绍：演示项目，主要实现车辆实时攻击的动态效果展示，流程触发攻击 -> 攻击成攻/防守成功。</div>
+                <div class="item-tech">技术实现：移动端H5开发，前后台基于websocket进行实时通讯，攻击效果基于canvas绘制，audio进行报警音乐提示以及其他动画。
+                </div>
+            </div>
+            <div class="item-part">
+                <div class="item-info">
+                    <div class="item-info-name">重型柴油车排放监控平台</div>
+                    <div class="item-info-date">2018.09 - 2019.03</div>
                 </div>
                 <div class="item-intro">项目介绍：平台主要用来完成车辆和终端的基本管理，能实时查看车辆的定位信息、状态等实时数据，可以查看车辆的历史轨迹，下载历史数据等，可以对车辆及终端信息进行编辑，也可以对采集的数据进行工况化处理。
                     可以对基础数据通信服务平台进行可视化的管理，可以对基础平台数据服务软件接口进行配置。</div>
@@ -114,13 +125,29 @@
                 <div class="item-intro">项目介绍：平台主要用于对城市用车的管理，主要涉及车辆的监控与管理，电子围栏的管理，报表管理，工作管理以及系统管理功能。</div>
                 <div class="item-tech">技术实现：技术上前后端分离，前端基于Vue实现单页面开发，主要涉及技术vue-router, vuex, 百度地图API, echarts，axios, vue2-editor, moment等。</div>
             </div>
+            <div class="item-part" style="padding: 10px 0 20px;">
+                <div class="item-info">
+                    <div class="item-info-name">远程监控平台RMS</div>
+                    <div class="item-info-date">2017.10 - 2018.06</div>
+                </div>
+                <div class="item-intro">项目介绍：平台主要用于车辆实时运营监控，终端远程多链路升级，历史轨迹回放，以及其他机构的数据对接。</div>
+                <div class="item-tech">技术实现：技术上前后分离，后台采用webService，前台基于webForm开发，结合bootstrap, ztree等插件实现。</div>
+            </div>
+            <div class="item-part" style="padding: 10px 0 20px;">
+                <div class="item-info">
+                    <div class="item-info-name">OBD远程监控平台</div>
+                    <div class="item-info-date">2017.06 - 2017.09</div>
+                </div>
+                <div class="item-intro">项目介绍：主要基于OBD终端设备对于车辆排放污染物进行实时监测，对于检测数据进行云统计分析，为环境改善提供具体方向。</div>
+                <div class="item-tech">技术实现：技术上前后分离，后台采用Spring MVC，前台基于bootstrap，echarts，vue，jstree，jquery相关插件等技术实现。</div>
+            </div>
         </div>
         <div class="item">
             <div class="badge">掌握技能</div>
             <ul class="item-content">
                 <li>熟悉jQuery, javascript，CSS(3)， HTML(5)</li>
                 <li>熟悉React、Vue等前端单页面模块化开发及其相关技术</li>
-                <li>熟悉SVN、git等项目管理工具</li>
+                <li>熟悉SVN、git、jira等项目管理工具</li>
                 <li>了解Node、PHP、MySQL、C#、JavaWeb等后端知识</li>
             </ul>
         </div>
