--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@
                 <div class="item-tech">技术实现：技术上前后端分离，前端采用传统模式实现单页面开发，结合html5的history实现前台的router，使用百度地图实来现车辆的地图定位、移动、信息显示以及GPS采集坐标转换等，使用echarts实现可视化管理，使用jquery-validate来提示用户输入。
                 </div>
             </div>
-            <div class="item-part" style="padding: 10px 0 20px;">
+            <div class="item-part" style="padding: 10px 0 0;">
                 <div class="item-info">
                     <div class="item-info-name">泰安市园林局车辆管理系统</div>
                     <div class="item-info-date">2018.06 - 2018.08</div>
@@ -125,7 +125,7 @@
                 <div class="item-intro">项目介绍：平台主要用于对城市用车的管理，主要涉及车辆的监控与管理，电子围栏的管理，报表管理，工作管理以及系统管理功能。</div>
                 <div class="item-tech">技术实现：技术上前后端分离，前端基于Vue实现单页面开发，主要涉及技术vue-router, vuex, 百度地图API, echarts，axios, vue2-editor, moment等。</div>
             </div>
-            <div class="item-part" style="padding: 10px 0 20px;">
+            <div class="item-part" style="padding: 10px 0 0;">
                 <div class="item-info">
                     <div class="item-info-name">远程监控平台RMS</div>
                     <div class="item-info-date">2017.10 - 2018.06</div>
